# einstellung

./: Cargo.toml  README.md
.github/workflows/: rust.yml
einstellung/: Cargo.toml
einstellung/examples/: config.toml  config.yaml  layered.rs  simple.rs
einstellung/src/: file_provider.rs  json.rs  lib.rs  tests.rs  toml.rs  yaml.rs
einstellung/src/providers/: json.rs  mod.rs  toml.rs  yaml.rs
einstellung/src/snapshots/: einstellung__tests__config_enum_correct.snap  einstellung__tests__config_enum_incorrect.snap  einstellung__tests__config_enum_missing.snap  einstellung__tests__config_freeze_collision.snap  einstellung__tests__missing_field.snap  einstellung__tests__missing_nested_field.snap  einstellung__tests__success.snap  einstellung__tests__user_config.snap  einstellung__tests__user_config_allowed_empty.snap  einstellung__tests__user_config_allowed_empty.snap.new  einstellung__tests__user_config_no_default.snap  einstellung__tests__user_config_no_default_not_allowed_empty.snap  einstellung__tests__user_config_option.snap  einstellung__tests__user_config_option_allowed_empty.snap  einstellung__tests__user_config_option_no_default.snap  einstellung__tests__user_config_option_no_default_allowed_empty.snap  einstellung__tests__validation_fail.snap
einstellung_derive/: .gitignore  Cargo.toml
einstellung_derive/src/: derive_config.rs  lib.rs  test.rs  tests.rs
einstellung_derive/src/derive_config/: generator.rs  mod.rs  parser.rs  transformer.rs
einstellung_derive/src/snapshots/: einstellung_derive__test__basic_primitives.snap  einstellung_derive__test__default_values.snap  einstellung_derive__test__invalid.snap  einstellung_derive__test__invalid_merge.snap  einstellung_derive__test__invalid_merge2.snap  einstellung_derive__test__kitchen_sink.snap  einstellung_derive__test__merge_strategies.snap  einstellung_derive__test__optional_fields_no_double_option.snap  einstellung_derive__test__optional_subconfig.snap  einstellung_derive__test__output_basic_primitives.snap  einstellung_derive__test__output_custom_merge_type_mismatch.snap  einstellung_derive__test__output_custom_merge_wrong_signature.snap  einstellung_derive__test__output_default_extend_interactions.snap  einstellung_derive__test__output_default_freeze_interactions.snap  einstellung_derive__test__output_default_function_signature_mismatch.snap  einstellung_derive__test__output_default_function_type_mismatch.snap  einstellung_derive__test__output_default_on_option.snap  einstellung_derive__test__output_default_on_optional_field.snap  einstellung_derive__test__output_default_value_lambda.snap  einstellung_derive__test__output_default_value_literal.snap  einstellung_derive__test__output_default_value_type_mismatch.snap  einstellung_derive__test__output_default_values.snap  einstellung_derive__test__output_duplicate_default_attribute.snap  einstellung_derive__test__output_duplicate_merge_attribute.snap  einstellung_derive__test__output_extend_on_non_collection.snap  einstellung_derive__test__output_freezable.snap  einstellung_derive__test__output_invalid_custom_merge_path.snap  einstellung_derive__test__output_invalid_item_enum.snap  einstellung_derive__test__output_invalid_item_unit_struct.snap  einstellung_derive__test__output_invalid_merge_foo.snap  einstellung_derive__test__output_invalid_merge_subconfig.snap  (+47 more)
(+28 files in other folders)
