[package]
name = "einstellung"
version = "0.1.0"
edition = "2024"
description = "A Rust Configuration Parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soruh/einstellung"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.9.8", optional = true }

einstellung_derive = { version = "0.1.0", path = "../einstellung_derive", optional = true }

[dev-dependencies]
insta = "1.46.3"


[features]
derive = ["dep:einstellung_derive"]

json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]

full = ["json", "toml", "yaml", "derive"]

default = ["full"]
