[package]
name = "einstellung_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }

[dev-dependencies]
insta = "1.46.3"
prettyplease = "0.2.37"
trybuild = "1.0.116"

