[package]
name = "einstellung_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
trybuild = "1.0.116"

[dev-dependencies]
insta = "1.46.3"
prettyplease = "0.2.37"
tempfile = "3.27.0"
trybuild = "1.0.116"
einstellung = { path = "../einstellung" }
