[package]
name = "einstellung_derive"
version = "0.1.3"
edition = "2024"
description = "Proc-Macro crate for einstellung"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soruh/einstellung"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }

[dev-dependencies]
insta = "1.46.3"
prettyplease = "0.2.37"
trybuild = "1.0.116"
einstellung = { path = "../einstellung" }
paste = "1.0.15"
